left side email template ui alignment issue fixed #407

--- a/src/app/core/leftsidebar/leftsidebar.component.css
+++ b/src/app/core/leftsidebar/leftsidebar.component.css
@@ -2,3 +2,4 @@ a.disabled {
    pointer-events: none;
    cursor: not-allowed;
 }
+.emailTempCss { width:259px; }
